Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -3,8 +3,17 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Void Dev BR - Portfólio de Desenvolvimento Web</title>
-    <meta name="description" content="Void Dev BR - Especializado em desenvolvimento web com HTML, CSS, JavaScript, Vue.js e mais.">
+    <title>Void Dev BR - Desenvolvimento Web | Portfólio e Projetos</title>
+    <meta name="description" content="Void Dev BR - Especializado em desenvolvimento web com HTML, CSS, JavaScript, Vue.js e mais. Confira meu portfólio e projetos!">
+    <meta name="keywords" content="voiddevbr, desenvolvimento web, HTML, CSS, JavaScript, Vue.js, portfólio, projetos, programação">
+    <meta name="author" content="Void Dev BR">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="Void Dev BR - Desenvolvimento Web | Portfólio e Projetos">
+    <meta property="og:description" content="Void Dev BR - Especializado em desenvolvimento web com HTML, CSS, JavaScript, Vue.js e mais. Confira meu portfólio e projetos!">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://seudominio.com">
+    <meta property="og:image" content="https://seudominio.com/caminho/para/sua-imagem.jpg">
+    <link rel="canonical" href="https://seudominio.com">
     <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
     <style>
       /* Reset básico */
@@ -126,11 +135,27 @@
     <div id="pros">
       <h2>Projetos</h2>
       <ul>
-        <li>Base404</li>
-        <li>V-Oza Map</li>
-        <li>FNAFVHS</li>
-        <li> nano+</li>
-        <li> gold System</li>
+        <li>
+          <h3>Projetos Web</h3>
+          <ul>
+            <li><a href="https://pocketplusorg.vercel.app/" target="_blank" rel="noopener noreferrer">Pocket Plus</a> - Um projeto de organização pessoal.</li>
+            <li><a href="https://gimg-two.vercel.app/" target="_blank" rel="noopener noreferrer">G Img</a> - Um buscador de imagens.</li>
+            <li><a href="https://linuxgold.vercel.app/" target="_blank" rel="noopener noreferrer">Linux Gold</a> - Recursos e tutoriais sobre Linux.</li>
+            <li><a href="https://fnafvhs.netlify.app/" target="_blank" rel="noopener noreferrer">FNAF VHS</a> - Um projeto relacionado ao universo de Five Nights at Freddy's.</li>
+            <li><a href="https://base404.netlify.app/" target="_blank" rel="noopener noreferrer">Base 404</a> - Um projeto experimental.</li>
+          </ul>
+        </li>
+        <li>
+          <h3>Projetos no GitHub</h3>
+          <ul>
+            <li><a href="https://github.com/MREVAN30/Pokemon.js" target="_blank" rel="noopener noreferrer">Pokemon.js</a> - Um script relacionado a Pokémon.</li>
+            <li><a href="https://github.com/MREVAN30/Axolotl-Open-source-buscador" target="_blank" rel="noopener noreferrer">Axolotl</a> - Um buscador de código aberto.</li>
+            <li><a href="https://github.com/MREVAN30/gravidade.js" target="_blank" rel="noopener noreferrer">Gravidade.js</a> - Simulação de física com JavaScript.</li>
+            <li><a href="https://github.com/Even838/E.p-pixel" target="_blank" rel="noopener noreferrer">E.P Pixel</a> - Um projeto de manipulação de pixels.</li>
+            <li><a href="https://github.com/Even838/Nano-interpreter" target="_blank" rel="noopener noreferrer">Nano Interpreter</a> - Um interpretador simples.</li>
+            <li><a href="https://github.com/Even838/Linux-droid" target="_blank" rel="noopener noreferrer">Linux Droid</a> - Linux para dispositivos móveis.</li>
+          </ul>
+        </li>
       </ul>
     </div>
 
@@ -143,4 +168,4 @@
       });
     </script>
   </body>
-  </html>
+</html>
