--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+
+</html><!DOCTYPE html>
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8">
@@ -104,6 +105,10 @@
         .name {
           font-size: 1.5rem;
         }
+        
+      }
+      a{
+        text-decoration: none;
       }
     </style>
   </head>
@@ -138,22 +143,27 @@
         <li>
           <h3>Projetos Web</h3>
           <ul>
-            <li><a href="https://pocketplusorg.vercel.app/" target="_blank" rel="noopener noreferrer">Pocket Plus</a> - Um projeto de organização pessoal.</li>
-            <li><a href="https://gimg-two.vercel.app/" target="_blank" rel="noopener noreferrer">G Img</a> - Um buscador de imagens.</li>
-            <li><a href="https://linuxgold.vercel.app/" target="_blank" rel="noopener noreferrer">Linux Gold</a> - Recursos e tutoriais sobre Linux.</li>
-            <li><a href="https://fnafvhs.netlify.app/" target="_blank" rel="noopener noreferrer">FNAF VHS</a> - Um projeto relacionado ao universo de Five Nights at Freddy's.</li>
-            <li><a href="https://base404.netlify.app/" target="_blank" rel="noopener noreferrer">Base 404</a> - Um projeto experimental.</li>
+            <li><a href="https://pocketplusorg.vercel.app/" target="_blank" rel="noopener noreferrer">Pocket Plus</a> game engine feita para criar jogos sem progamação (em beta)</li>
+            <li><a href="https://gimg-two.vercel.app/" target="_blank" rel="noopener noreferrer">G Img</a> - formato de img simples e leve.</li>
+            <li><a href="https://linuxgold.vercel.app/" target="_blank" rel="noopener noreferrer">Linux Gold</a> - sistema operacional emulado</li>
+            <li><a href="https://fnafvhs.netlify.app/" target="_blank" rel="noopener noreferrer">FNAF VHS</a> - fã game de fnaf .</li>
+            <li><a href="https://base404.netlify.app/" target="_blank" rel="noopener noreferrer">Base 404</a> - joguinho em js.</li>
           </ul>
         </li>
         <li>
           <h3>Projetos no GitHub</h3>
           <ul>
-            <li><a href="https://github.com/MREVAN30/Pokemon.js" target="_blank" rel="noopener noreferrer">Pokemon.js</a> - Um script relacionado a Pokémon.</li>
+            <li><a href="https://github.com/MREVAN30/Pokemon.js" target="_blank" rel="noopener noreferrer">Pokemon.js</a> -linguagem de programação esteric.</li>
             <li><a href="https://github.com/MREVAN30/Axolotl-Open-source-buscador" target="_blank" rel="noopener noreferrer">Axolotl</a> - Um buscador de código aberto.</li>
             <li><a href="https://github.com/MREVAN30/gravidade.js" target="_blank" rel="noopener noreferrer">Gravidade.js</a> - Simulação de física com JavaScript.</li>
-            <li><a href="https://github.com/Even838/E.p-pixel" target="_blank" rel="noopener noreferrer">E.P Pixel</a> - Um projeto de manipulação de pixels.</li>
-            <li><a href="https://github.com/Even838/Nano-interpreter" target="_blank" rel="noopener noreferrer">Nano Interpreter</a> - Um interpretador simples.</li>
-            <li><a href="https://github.com/Even838/Linux-droid" target="_blank" rel="noopener noreferrer">Linux Droid</a> - Linux para dispositivos móveis.</li>
+            <li><a href="https://github.com/Even838/E.p-pixel" target="_blank" rel="noopener noreferrer">E.P Pixel</a> - editor de sprite.</li>
+            <li><a href="https://github.com/Even838/Nano-interpreter" target="_blank" rel="noopener noreferrer">Nano Interpreter</a> - uma Leg feita em lua.</li>
+
+        <li><a href="https://v-ozamap.vercel.app/" target="_blank" rel="noopener noreferrer"> v-oza map</a> site para criar mapas mentais </li>
+<li> <a href="https://vnanodoc.vercel.app/"> VNANO.JS</a> VNANO E uma lib js com códigos pre prontos
+
+</li>
+            
           </ul>
         </li>
       </ul>
