--- a/index.html
+++ b/index.html
@@ -1,181 +1,207 @@
-
-</html><!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-BR">
-  <head>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Void Dev BR - Desenvolvimento Web | Portfólio e Projetos</title>
-    <meta name="description" content="Void Dev BR - Especializado em desenvolvimento web com HTML, CSS, JavaScript, Vue.js e mais. Confira meu portfólio e projetos!">
-    <meta name="keywords" content="voiddevbr, desenvolvimento web, HTML, CSS, JavaScript, Vue.js, portfólio, projetos, programação">
+    <title>Void Dev BR - Portfólio</title>
+    <meta name="description" content="Void Dev BR - Desenvolvedor web e de jogos. Confira meu portfólio e projetos!">
+    <meta name="keywords" content="Void Dev BR, desenvolvimento web, jogos, HTML, CSS, JavaScript, Vue.js">
     <meta name="author" content="Void Dev BR">
     <meta name="robots" content="index, follow">
-    <meta property="og:title" content="Void Dev BR - Desenvolvimento Web | Portfólio e Projetos">
-    <meta property="og:description" content="Void Dev BR - Especializado em desenvolvimento web com HTML, CSS, JavaScript, Vue.js e mais. Confira meu portfólio e projetos!">
+    <meta property="og:title" content="Void Dev BR - Portfólio">
+    <meta property="og:description" content="Desenvolvimento Web, Jogos e Projetos Open Source.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://seudominio.com">
-    <meta property="og:image" content="https://seudominio.com/caminho/para/sua-imagem.jpg">
-    <link rel="canonical" href="https://seudominio.com">
+    <meta property="og:image" content="https://seudominio.com/imagem.jpg">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
     <style>
-      /* Reset básico */
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-      }
+        /* Reset */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            scroll-behavior: smooth;
+        }
 
-      body {
-        font-family: Arial, sans-serif;
-        line-height: 1.6;
-        background-color: #f4f4f4;
-        color: #333;
-        padding: 20px;
-      }
+        body {
+            font-family: 'Poppins', sans-serif;
+            background-color: #0a192f;
+            color: #ccd6f6;
+            padding: 20px;
+        }
 
-      h1, h2, h3 {
-        color: #444;
-      }
+        /* Container Principal */
+        #app {
+            max-width: 800px;
+            margin: 0 auto;
+            background: #112240;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 15px rgba(0, 255, 255, 0.2);
+            animation: fadeIn 1.5s ease-in-out;
+        }
 
-      h1 {
-        font-size: 2.5rem;
-        margin-bottom: 20px;
-      }
-
-      h2 {
-        font-size: 2rem;
-        margin-top: 30px;
-        margin-bottom: 15px;
-      }
-
-      h3 {
-        font-size: 1.5rem;
-        margin-top: 20px;
-        margin-bottom: 10px;
-      }
-
-      p {
-        margin-bottom: 10px;
-      }
-
-      ul {
-        list-style-type: disc;
-        margin-left: 20px;
-        margin-bottom: 20px;
-      }
-
-      li {
-        margin-bottom: 5px;
-      }
-
-      #app {
-        max-width: 800px;
-        margin: 0 auto;
-        background: #fff;
-        padding: 20px;
-        border-radius: 8px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-      }
-
-      #pros {
-        margin-top: 30px;
-      }
-
-      /* Estilo para o nome */
-      .name {
-        font-size: 2rem;
-        font-weight: bold;
-        color: #007BFF;
-        margin-bottom: 20px;
-      }
-
-      /* Responsividade */
-      @media (max-width: 600px) {
+        /* Títulos */
         h1 {
-          font-size: 2rem;
+            font-size: 2.5rem;
+            color: #64ffda;
+            text-align: center;
         }
 
         h2 {
-          font-size: 1.5rem;
+            font-size: 1.8rem;
+            color: #64ffda;
+            margin-top: 20px;
         }
 
         h3 {
-          font-size: 1.2rem;
+            font-size: 1.5rem;
+            margin-top: 15px;
         }
 
+        /* Nome */
         .name {
-          font-size: 1.5rem;
+            font-size: 2rem;
+            font-weight: bold;
+            color: #00bcd4;
+            text-align: center;
+            margin-bottom: 20px;
         }
-        
-      }
-      a{
-        text-decoration: none;
-      }
+
+        /* Lista */
+        ul {
+            list-style: none;
+            margin: 10px 0;
+            padding-left: 15px;
+        }
+
+        ul li {
+            padding: 5px 0;
+            transition: all 0.3s ease;
+        }
+
+        ul li:hover {
+            color: #64ffda;
+            transform: scale(1.05);
+        }
+
+        /* Links */
+        a {
+            text-decoration: none;
+            color: #64ffda;
+            font-weight: bold;
+            transition: 0.3s;
+        }
+
+        a:hover {
+            color: #00bcd4;
+            text-decoration: underline;
+        }
+
+        /* Projetos */
+        #pros {
+            margin-top: 30px;
+            background: #112240;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 15px rgba(0, 255, 255, 0.2);
+        }
+
+        #pros h2 {
+            text-align: center;
+        }
+
+        /* Responsividade */
+        @media (max-width: 600px) {
+            h1 {
+                font-size: 2rem;
+            }
+
+            h2 {
+                font-size: 1.5rem;
+            }
+
+            h3 {
+                font-size: 1.2rem;
+            }
+
+            .name {
+                font-size: 1.5rem;
+            }
+        }
+
+        /* Animação */
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+                transform: translateY(-20px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
     </style>
-  </head>
-  <body>
+</head>
+<body>
     <div id="app">
-      <div class="name">{{ name }}</div>
-      <section>
-        <h2>Tecnologias</h2>
-        <ul>
-          <li>HTML (avançado)</li>
-          <li>CSS (intermediário)</li>
-          <li>JavaScript (intermediário)</li>
-          <li>Bash (básico)</li>
-          <li>Node.js (básico)</li>
-        </ul>
-      </section>
-      <section>
-        <h2>Tecnologias em Aprendizado</h2>
-        <ul>
-          <li>Vue.js</li>
-        </ul>
-      </section>
-      <section>
-        <h3>Idiomas</h3>
-        <p>Português (nativo)</p>
-        <p>Inglês (básico)</p>
-      </section>
+        <div class="name">{{ name }}</div>
+        <section>
+            <h2>Tecnologias</h2>
+            <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JavaScript (Intermediário)</li>
+                <li>Bash</li>
+                <li>Golang</li>
+            </ul>
+        </section>
+        <section>
+            <h2>Tecnologias em Aprendizado</h2>
+            <ul>
+                <li>Vue.js</li>
+            </ul>
+        </section>
+        <section>
+            <h3>Idiomas</h3>
+            <p>Português (Nativo)</p>
+            <p>Inglês (Intermediário)</p>
+        </section>
     </div>
     <div id="pros">
-      <h2>Projetos</h2>
-      <ul>
-        <li>
-          <h3>Projetos Web</h3>
-          <ul>
-            <li><a href="https://pocketplusorg.vercel.app/" target="_blank" rel="noopener noreferrer">Pocket Plus</a> game engine feita para criar jogos sem progamação (em beta)</li>
-            <li><a href="https://gimg-two.vercel.app/" target="_blank" rel="noopener noreferrer">G Img</a> - formato de img simples e leve.</li>
-            <li><a href="https://linuxgold.vercel.app/" target="_blank" rel="noopener noreferrer">Linux Gold</a> - sistema operacional emulado</li>
-            <li><a href="https://fnafvhs.netlify.app/" target="_blank" rel="noopener noreferrer">FNAF VHS</a> - fã game de fnaf .</li>
-            <li><a href="https://base404.netlify.app/" target="_blank" rel="noopener noreferrer">Base 404</a> - joguinho em js.</li>
-          </ul>
-        </li>
-        <li>
-          <h3>Projetos no GitHub</h3>
-          <ul>
-            <li><a href="https://github.com/MREVAN30/Pokemon.js" target="_blank" rel="noopener noreferrer">Pokemon.js</a> -linguagem de programação esteric.</li>
-            <li><a href="https://github.com/MREVAN30/Axolotl-Open-source-buscador" target="_blank" rel="noopener noreferrer">Axolotl</a> - Um buscador de código aberto.</li>
-            <li><a href="https://github.com/MREVAN30/gravidade.js" target="_blank" rel="noopener noreferrer">Gravidade.js</a> - Simulação de física com JavaScript.</li>
-            <li><a href="https://github.com/Even838/E.p-pixel" target="_blank" rel="noopener noreferrer">E.P Pixel</a> - editor de sprite.</li>
-            <li><a href="https://github.com/Even838/Nano-interpreter" target="_blank" rel="noopener noreferrer">Nano Interpreter</a> - uma Leg feita em lua.</li>
-
-        <li><a href="https://v-ozamap.vercel.app/" target="_blank" rel="noopener noreferrer"> v-oza map</a> site para criar mapas mentais </li>
-<li> <a href="https://vnanodoc.vercel.app/"> VNANO.JS</a> VNANO E uma lib js com códigos pre prontos
-
-</li>
-            
-          </ul>
-        </li>
-      </ul>
+        <h2>Projetos</h2>
+        <ul>
+            <li>
+                <h3>Projetos Web</h3>
+                <ul>
+                    <li><a href="https://pocketplusorg.vercel.app/" target="_blank">Pocket Plus</a> - Engine para criar jogos sem programação</li>
+                    <li><a href="https://gimg-two.vercel.app/" target="_blank">G Img</a> - Formato de imagem leve</li>
+                    <li><a href="https://linuxgold.vercel.app/" target="_blank">Linux Gold</a> - Sistema operacional emulado</li>
+                    <li><a href="https://fnafvhs.netlify.app/" target="_blank">FNAF VHS</a> - Fã game de FNAF</li>
+                    <li><a href="https://base404.netlify.app/" target="_blank">Base 404</a> - Joguinho em JS</li>
+                </ul>
+            </li>
+            <li>
+                <h3>Projetos no GitHub</h3>
+                <ul>
+                    <li><a href="https://github.com/MREVAN30/Pokemon.js" target="_blank">Pokemon.js</a> - Linguagem de programação estética</li>
+                    <li><a href="https://github.com/MREVAN30/Axolotl-Open-source-buscador" target="_blank">Axolotl</a> - Buscador de código aberto</li>
+                    <li><a href="https://github.com/MREVAN30/gravidade.js" target="_blank">Gravidade.js</a> - Simulação de física com JS</li>
+                    <li><a href="https://github.com/Even838/E.p-pixel" target="_blank">E.P Pixel</a> - Editor de sprite</li>
+                </ul>
+            </li>
+        </ul>
     </div>
 
     <script>
-      new Vue({
-        el: '#app',
-        data: {
-          name: "Olá, sou Void Dev BR"
-        }
-      });
+        new Vue({
+            el: '#app',
+            data: {
+                name: "Olá, sou Void Dev BR"
+            }
+        });
     </script>
-  </body>
+</body>
 </html>
